# Taxidus

./: .env.example  .env.testing  .gitignore  README.md  alembic.ini  composer.json  package-lock.json  package.json  phpstan.neon  pyproject.toml  tlint.json  tsconfig.json  vite.config.js
.github/workflows/: ci.yaml
app/Console/Commands/: FlushSessions.php  MakeUser.php
app/Enums/: DataTypeEnum.php  EntityRoleEnum.php  ObjectTypeEnum.php  RoleEnum.php  SessionRoleEnum.php
app/Filament/Clusters/: Game.php
app/Filament/Resources/: BiomeResource.php  DataTypeResource.php  EntityResource.php  EntityRoleResource.php  GameObjectResource.php  ObjectTypeResource.php  PlayerResource.php  RoleResource.php  SessionResource.php  SessionRoleResource.php  UserResource.php
app/Models/: Biome.php  BiomeEntity.php  DataType.php  Entity.php  EntityData.php  EntityInventory.php  EntityRole.php  GameObject.php  GameSession.php  ObjectData.php  ObjectType.php  Player.php  PlayerData.php  PlayerInventory.php  PlayerStat.php  Role.php  SessionBiome.php  SessionData.php  SessionRole.php  User.php
app/Providers/Filament/: AdminPanelProvider.php
config/: blade-lucide-icons.php  filament.php
database/migrations/: 2024_11_29_001338_initial_setup.php  2024_11_29_015505_add_user_metadata.php
database/seeders/: DataTypeSeeder.php  DatabaseSeeder.php  EntityRoleSeeder.php  ObjectTypeSeeder.php  SessionRoleSeeder.php  UserRoleSeeder.php
resources/js/: app.js
resources/views/: welcome.blade.php
src/: __init__.py
src/utils/: db.py  settings.py
tests/: example_test.py
(+36 files in other folders)
